# Otus-Algorithm-2025-06

./: .gitignore  CMakeLists.txt  README.md  print_cmake_project_files.sh
cache-lib/: CMakeLists.txt  README.md
cache-lib/benchmarks/: CacheBenchmark.cpp
cache-lib/demo/: main.cpp
cache-lib/docs/: cache-library-proposal.md  cache-library-spec.md
cache-lib/tests/: CacheTest.cpp  LRUPolicyTest.cpp  ListenersTest.cpp
common/: CMakeLists.txt
common/include/: BaseSorter.h  ThreadSafeMap.hpp  TimeFormatter.h
common/src/: BaseSorter.cpp  Timer.cpp
common/tests/: ThreadSafeMapTest.cpp  TimeFormatterTest.cpp
hw-02-lucky-tickets/: CMakeLists.txt  LuckyTicketCounter.h  LuckyTickets-Logic.xlsx  main.cpp
hw-02-lucky-tickets/core/:  FileReader.cpp  Counter.h  FileReader.h  TestAssert.cpp  TestAssert.h  TestParam.cpp  TestParam.h  TestParamLoader.cpp  TestParamLoader.h  TestResult.h  TestRunner.cpp  TestRunner.h
hw-03-algebraic-algorithms/tests/: CMakeLists.txt
hw-04-array-queue/: CMakeLists.txt  README.md
hw-04-array-queue/include/: Array.h  DoublyLinkedList.h  FactorArray.h  LinkedList.h  MatrixArray.h  PriorityQueueArrayList.h  SingleArray.h  SpaceArray.h  VectorArray.h
hw-04-array-queue/src/: benchmark.cpp
hw-04-array-queue/tests/: CMakeLists.txt  DoublyLinkedListTests.cpp  FactorArrayTest.cpp  LinkedListTests.cpp  MatrixArrayTest.cpp  PriorityQueueArrayListTest.cpp  SingleArrayTest.cpp  SpaceArrayTest.cpp  VectorArrayTest.cpp
hw-05-bits/: CMakeLists.txt
hw-05-bits/include/: Bishop.h  BitBoardPrinter.h  BitUtils.h  FastBitUtils.h  King.h  Knight.h  Moveable.h  Queen.h  Rook.h
hw-05-bits/src/: Bishop.cpp  BitBoardPrinter.cpp  King.cpp  Knight.cpp  Queen.cpp  Rook.cpp  main.cpp
hw-05-bits/tests/: BishopTest.cpp  BitUtilsTest.cpp  CMakeLists.txt  FastBitUtilsTest.cpp  KingTest.cpp  KnightTest.cpp  QueenTest.cpp  RookTest.cpp  all_test_runner.cpp
hw-06-search-and-sort/: Algo-06-Serach-and-Sort.md  CI.md  CMakeLists.txt  CMakePresets.json  Report.md
hw-06-search-and-sort/include/: AppMode.h  AppState.h  BaseSorter.h  BinaryInsertionSorter.h  ColoredRecord.h  LoggingSortListener.h  ProgressBarListener.h  RandomArrayGenerator.h  Record.h  Searchable.h  SortEvent.h  SortEventFormatter.h  SortListener.h  Sortable.h  SorterFactory.h  Visualizer.h
hw-06-search-and-sort/src/: main.cpp
hw-06-search-and-sort/tests/: random_array_generator_test.cpp  record_test.cpp  test_binary_insertion_sorter.cpp  test_binary_insertion_sorter_binary_search.cpp  test_custom_shell_sorter.cpp  test_index_searcher.cpp  test_sort_all.cpp
hw-07-quick-merge-external-sort/: CMakeLists.txt
hw-07-quick-merge-external-sort/demo/: benchmark_external_sorters.cpp  benchmark_sorters_extended.cpp  demo_quick_merge_sort.cpp
hw-07-quick-merge-external-sort/docs/: Quick_Merge_External_Sort.md  REPORT.md  task-hw-07-quick-merge-external-sort.md
hw-07-quick-merge-external-sort/include/: AsyncRunner.h  BaseSorter.h  BinaryInsertionSorter.h  BubbleSorter.h  CocktailSorter.h  ExternalSort.h  ExternalSortES1.h  ExternalSortES3.h  ExternalSorter.h  FileGenerator.h  FileService.h  FileSystemService.h  InMemoryFileService.h  InsertionShiftSorter.h  LoggingSortListener.h  PrintUtils.h  QuickSorter.h  RandomArrayGenerator.h  Searchable.h  SortEvent.h  SortEventFormatter.h  SortListener.h  SorterFactory.h  ThreadSafeVector.h  TimeSettings.h  Timer.h
hw-07-quick-merge-external-sort/src/: BaseSorter.cpp  CustomShellSorter.cpp  DurationSortListener.cpp  ExternalSortES1.cpp  FileGenerator.cpp  FileSystemService.cpp  InMemoryFileService.cpp  InsertionShiftSorter.cpp  InsertionSorter.cpp  PrintUtils.cpp  QuickSorter.cpp  RandomArrayGenerator.cpp  TimeFormatter.cpp
hw-07-quick-merge-external-sort/tests/: AsyncRunnerTest.cpp  BenchmarkDataGeneratorTest.cpp  ExternalSortES1Test.cpp  ExternalSortES2Test.cpp  ExternalSortES3Test.cpp  FileGeneratorTest.cpp  FileSystemServiceTests.cpp  RandomArrayGeneratorTest.cpp  ThreadSafeVectorTest.cpp  quick_merge_sort_test.cpp  test_sort_all.cpp
hw-07-selectionsort-heapsort/: CMakeLists.txt  README.md
hw-07-selectionsort-heapsort/demo/: benchmark_sorters.cpp  benchmark_sorters_extended.cpp  demo_selection_heap_sort.cpp
hw-07-selectionsort-heapsort/docs/: REPORT.md  Selection_Heap_Sort.md
hw-07-selectionsort-heapsort/include/: HeapSorter.h  SelectionSorter.h
hw-07-selectionsort-heapsort/src/: HeapSorter.cpp  SelectionSorter.cpp
hw-07-selectionsort-heapsort/tests/: test_sort_all.cpp
hw-09-counting-radix-bucket-sort/: CMakeLists.txt  README.md
hw-09-counting-radix-bucket-sort/demo/: benchmark_junior.cpp  benchmark_middle.cpp  generate_file.cpp
hw-09-counting-radix-bucket-sort/include/: BucketSorter.hpp  CountingSorter.hpp  ILinearSorter.hpp  RadixSorter.hpp
hw-09-counting-radix-bucket-sort/src/: BucketSorter.cpp  CountingSorter.cpp  RadixSorter.cpp
hw-09-counting-radix-bucket-sort/tests/: test_linear_sorters.cpp
hw-10-bst-avl-treap/: CMakeLists.txt  README.md  promt.md
hw-10-bst-avl-treap/demo/: benchmark_trees.cpp
hw-10-bst-avl-treap/docs/: Binary_Trees_Overview.md
hw-10-bst-avl-treap/include/: AVLTree.hpp  BinarySearchTree.hpp  IBinaryTree.hpp  Treap.hpp
hw-10-bst-avl-treap/src/: AVLTree.cpp  BinarySearchTree.cpp  Treap.cpp
hw-10-bst-avl-treap/tests/: test_trees.cpp
hw-11-optimal-search-tree/: CMakeLists.txt  README.md
hw-11-optimal-search-tree/demo/: benchmark.cpp
hw-11-optimal-search-tree/docs/: LECTURE.md
hw-11-optimal-search-tree/include/: OptimalTreeAlgo1.hpp  OptimalTreeAlgo2.hpp  OptimalTreeBase.hpp
hw-11-optimal-search-tree/tests/: OptimalTreeTests.cpp
hw-12-hash/: CMakeLists.txt  README.md
hw-13-trie/: CMakeLists.txt  README.md
hw-15-demucron/: CMakeLists.txt  README.md
hw-16-mst/: CMakeLists.txt  README.md
hw-17-shortest-paths/: CMakeLists.txt  README.md
hw-18-boyer-moore-search/: CMakeLists.txt  README.md
hw-19-kmp-search/: CMakeLists.txt  README.md
hw-20-compression/: CMakeLists.txt  README.md
hw-21-dynamic-programming/: CMakeLists.txt  README.md
hw-22-probabilistic/: CMakeLists.txt  README.md
(+222 files in other folders)
